--- a/omnifood/resources/css/style.css
+++ b/omnifood/resources/css/style.css
@@ -199,11 +199,11 @@ header{
 }
 
 .hero-text-box{
-    position: relative;
+    position: absolute;
     width: 1140px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%)
+    transform: translate(-50%,-50%);
 }
 
 .logo{
