--- a/omnifood/resources/css/style.css
+++ b/omnifood/resources/css/style.css
@@ -256,6 +256,24 @@ header{
     border-bottom: 2px solid #e67e22;
 }
 
+/* mobile navi */
+.mobile-nav-icon{
+    float: right;
+    margin-top: 30px;
+    cursor: pointer;
+    display: none;
+}
+
+.mobile-nav-icon{
+    font-size: 200%;
+    color: #fff;
+    border: none !important;
+}
+
+.mobile-nav-icon i {
+    color: #fff;
+}
+
 /* Sticky navi */
 .sticky{
     position: fixed;
@@ -263,7 +281,8 @@ header{
     left: 0;
     width: 100%;
     background-color: rgba(255, 255 ,255 , 0.98);
-    box-shadow: 0 2px 2px #efefef;
+    -webkit-box-shadow: 0 2px 2px #efefef;
+            box-shadow: 0 2px 2px #efefef;
     z-index: 9999;
 }
 
@@ -390,10 +409,6 @@ header{
     width: 100%;
     height: auto;
     margin-bottom: 15px; 
-}
-
-.city{
-    margin: 1% 0 1% 1%;
 }
 
 .city-feature{
@@ -613,3 +628,25 @@ footer p {
     margin-top: 20px;
 }
 
+/*-----------------------------------*/
+/*ANIMATION*/
+/*------------------------------------*/
+
+.js--wp-1,
+.js--wp-2,
+.js--wp-3{
+    opacity: 0;
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+}
+
+.js--wp-4{
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+}
+
+.js--wp-1.animated,
+.js--wp-2.animated,
+.js--wp-3.animated{
+    opacity: 1;
+}
